[gd_scene load_steps=10 format=3 uid="uid://soki6itkwp6w"]

[ext_resource type="Script" path="res://Scripts/ed_credits.gd" id="1_2yni0"]
[ext_resource type="Texture2D" uid="uid://d3gdjijkio7s" path="res://Assets/Sprites/Credits.png" id="1_ygnr4"]
[ext_resource type="FontFile" uid="uid://3h073fjh4f3g" path="res://Assets/Fonts/Hardpixel.OTF" id="2_8u24m"]
[ext_resource type="AudioStream" uid="uid://c64slmu34evyt" path="res://Assets/Sounds/button_click.ogg" id="4_5rqd0"]
[ext_resource type="AudioStream" uid="uid://x0n8e0p8jdex" path="res://Assets/Sounds/ui_interact.ogg" id="5_5xgdp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_apbrf"]
texture = ExtResource("1_ygnr4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nllr5"]
bg_color = Color(0.133333, 0.12549, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojtxj"]
bg_color = Color(0.6, 0.898039, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psdgr"]
bg_color = Color(0.6, 0.898039, 0.313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2yni0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(4, 4)
theme_override_styles/panel = SubResource("StyleBoxTexture_apbrf")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 897.0
offset_top = 551.0
offset_right = 1037.0
offset_bottom = 583.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_colors/font_color = Color(0.6, 0.898039, 0.313726, 1)
theme_override_colors/font_pressed_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_8u24m")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_nllr5")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojtxj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_psdgr")
text = "Back to Menu"

[node name="ui_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5rqd0")

[node name="ui_interact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5xgdp")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
